--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.0",
     "react-dom": "^19.1.1",
     "react": "^19.1.1",
     "lucide-react": "^0.544.0"
